21，28， 35， 69，867 some simple problems

--- a/leetcode/CMakeLists.txt
+++ b/leetcode/CMakeLists.txt
@@ -15,3 +15,20 @@ add_executable(013_ 013/roman_to_integer.cpp)
 
 #014
 add_executable(014_ 014/longest_common_prefix.cpp)
+
+#021
+add_executable(021_ 021/merge_two_sorted_list.cpp)
+
+#028
+add_executable(028_ 028/strstr.cpp)
+
+#035
+add_executable(035_ 035/search_insert_position.cpp)
+
+#069
+add_executable(069_ 069/sqrt.cpp)
+
+
+
+#867
+add_executable(867_ 867/transpose_matrix.cpp)
