--- a/leetcode/CMakeLists.txt
+++ b/leetcode/CMakeLists.txt
@@ -1,35 +1,41 @@
 cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 11)
 
+include_directories(".")
+include_directories("utils")
+
 #001
-add_executable(001_ 001/two_sum.cpp)
+add_executable(0001_ 001/two_sum.cpp)
 
 #007
-add_executable(007_ 007/reverse_integer.cpp)
+add_executable(0007_ 007/reverse_integer.cpp)
 
 #009
-add_executable(009_ 009/palindrone_number.cpp)
-
-#013
-add_executable(013_ 013/roman_to_integer.cpp)
+add_executable(0009_ 009/palindrone_number.cpp)
 
 #014
-add_executable(014_ 014/longest_common_prefix.cpp)
+add_executable(0014_ 014/longest_common_prefix.cpp)
 
 #021
-add_executable(021_ 021/merge_two_sorted_list.cpp)
+add_executable(0021_ 021/merge_two_sorted_list.cpp)
 
-#028
-add_executable(028_ 028/strstr.cpp)
+#067
+add_executable(0067_ 067/add_binary.cpp)
 
-#035
-add_executable(035_ 035/search_insert_position.cpp)
 
 #069
-add_executable(069_ 069/sqrt.cpp)
+add_executable(0069_ 069/sqrt.cpp)
+
+
+#112
+add_executable(0112_ 112/path_sum.cpp)
+
 
 #278
-add_executable(278_ 278/first_bad_version.cpp)
+add_executable(0278_ 278/first_bad_version.cpp)
 
-#867
-add_executable(867_ 867/transpose_matrix.cpp)
+add_subdirectory(string)
+add_subdirectory(array)
+add_subdirectory(matrix)
+add_subdirectory(dynamic_programming)
+add_subdirectory(math)
