--- a/leetcode/string/CMakeLists.txt
+++ b/leetcode/string/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 11)
 
 #0003
-add_executable(0003 0003_Longest_Substring_Without_Repeating_Characters/main.cpp)
+add_executable(0003 0003_Longest_Substring_Without_Repeating_Characters/main.cpp 0038_Count_and_Say/main.cpp)
 
 #008
 add_executable(0008_ atoi.cpp)
@@ -12,6 +12,9 @@ add_executable(0013_ roman_to_integer.cpp)
 
 #028
 add_executable(0028_ strstr.cpp)
+
+#38
+add_executable(38 0038_Count_and_Say/main.cpp)
 
 #0125
 add_executable(0125_ 0125_Valid_Palindrome/main.cpp)
@@ -25,6 +28,20 @@ add_executable(0344_ 0344_Reverse_String/main.cpp)
 #0345
 add_executable(0345_ 0345_Reverse_Vowels_of_a_String/main.cpp)
 
+#0394
+add_executable(0394 0394_Decode_String/main.cpp)
+
+#0415
+add_executable(0415 0415_Add_Strings/main.cpp)
+
+#0434
+add_executable(0434 0434_Number_of_Segments_in_a_String/main.cpp)
+
+#0459
+add_executable(0459 0459_Repeated_Substring_Pattern/main.cpp)
+
 #0520
 add_executable(0520_ 0520_Detect_Capital/main.cpp)
 
+#0767
+add_executable(0767 0767_Reorganize_String/main.cpp)
