--- a/leetcode/link_list/CMakeLists.txt
+++ b/leetcode/link_list/CMakeLists.txt
@@ -4,3 +4,6 @@ add_executable(0002 0002_Add_Two_Numbers/main.cpp)
 
 #021
 add_executable(0021 merge_two_sorted_list.cpp)
+
+#83
+add_executable(83 0083_Remove_Duplicates_from_Sorted_List/main.cpp)
