--- a/leetcode/CMakeLists.txt
+++ b/leetcode/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(0112_ _bynum/112/path_sum.cpp)
 #278
 add_executable(0278_ _bynum/278/first_bad_version.cpp)
 
+add_subdirectory(bits)
 add_subdirectory(string)
 add_subdirectory(array)
 add_subdirectory(matrix)
