--- a/leetcode/CMakeLists.txt
+++ b/leetcode/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(0112_ _bynum/112/path_sum.cpp)
 add_executable(0278_ _bynum/278/first_bad_version.cpp)
 
 add_subdirectory(bits)
+add_subdirectory(backtracking)
 add_subdirectory(string)
 add_subdirectory(array)
 add_subdirectory(matrix)
@@ -36,5 +37,6 @@ add_subdirectory(math)
 add_subdirectory(link_list)
 add_subdirectory(set&map)
 add_subdirectory(dynamic_programming)
+add_subdirectory(usefull)
 
 add_subdirectory(design)
