--- a/leetcode/link_list/CMakeLists.txt
+++ b/leetcode/link_list/CMakeLists.txt
@@ -5,6 +5,9 @@ add_executable(0002 0002_Add_Two_Numbers/main.cpp)
 #021
 add_executable(0021 merge_two_sorted_list.cpp)
 
+#23
+add_executable(23 0023_Merge_k_Sorted_Lists/main.cpp)
+
 #24
 add_executable(24 0024_Swap_Nodes_in_Pairs/main.cpp)
 
