--- a/leetcode/binary_tree/CMakeLists.txt
+++ b/leetcode/binary_tree/CMakeLists.txt
@@ -4,5 +4,13 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories(".")
 include_directories("..")
 
+#94
+add_executable(94 0094_Binary_Tree_Inorder_Traversal/main.cpp binary_tree.cpp)
 
+#144
 add_executable(144 0144_Binary_Tree_Preorder_Traversal/main.cpp binary_tree.cpp)
+
+#145
+add_executable(145 0145_Binary_Tree_Postorder_Traversal/main.cpp binary_tree.cpp)
+
+
