--- a/leetcode/backtracking/CMakeLists.txt
+++ b/leetcode/backtracking/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+#17
+add_executable(17 0017_Letter_Combinations_of_a_Phone_Number/main.cpp)
 
 #22
 add_executable(22 0022_Generate_Parentheses/main.cpp)
