add tree2str reverseWords_III

--- a/leetcode/binary_tree/CMakeLists.txt
+++ b/leetcode/binary_tree/CMakeLists.txt
@@ -22,3 +22,6 @@ add_executable(145 0145_Binary_Tree_Postorder_Traversal/main.cpp binary_tree.cpp
 
 #226
 add_executable(226 0226_Invert_Binary_Tree/main.cpp binary_tree.cpp)
+
+#606
+add_executable(606 0606_Construct_String_from_Binary_Tree/main.cpp binary_tree.cpp)
