--- a/leetcode/backtracking/CMakeLists.txt
+++ b/leetcode/backtracking/CMakeLists.txt
@@ -5,5 +5,8 @@ add_executable(17 0017_Letter_Combinations_of_a_Phone_Number/main.cpp)
 #22
 add_executable(22 0022_Generate_Parentheses/main.cpp)
 
-#27
+#77
 add_executable(77 0077_Combinations/main.cpp)
+
+#46
+add_executable(46 0046_Permutations/main.cpp)
